<resources>
    <string name="app_name">MyProject</string>
    <string name="action_settings">Settings</string>
    <string name="theatre_square">Ternopol not replete with plenty of architectural monuments. But all there is, creates a unique romantic image of the city. The number of such places includes the Theatre Square. The history of the area During the Great Patriotic War, Ternopil very hurt. Most of the buildings were completely destroyed. What exactly was on the spot to find out the area and failed. It was decided to build a drama theater and the surrounding area. In the 1950s there was the theater, and one of the most beautiful squares of the city. Not so long ago in Ternopil Theatre Square was restored. It was found several new objects. Attractions Theatre Square From Drama Theater named after Taras Shevchenko is a cozy lane with an arched design, lengthy greens. It is considered the beginning of the Theatre Square. Further, the area extends into a pedestrian zone. In the shade of trees hiding skillfully made benches. Theatre Square is lined with paving slabs. Around all perfectly landscaped. But most importantly, here you can see some original monuments. So in one of the shops you will make the company women`s sculpture, like a teacher of English. Once on the square is a monument Krushelnytska. The real decoration of the Theatre Square is a fountain. He adds lightness and playfulness of the landscape, perfectly refreshing on hot summer days.</string>
    <string name="location">Location</string>
    <string name="beautiful_ternopil">Beautiful Ternopil</string>
    <string name="contents">Contents:</string>
    <string name="square">1. Theatre square</string>
    <string name="castle">2. Ternopil castle</string>
    <string name="venetian">3. Venetian - style courtyard</string>
    <string name="pond">4. Ternopil pond</string>
    <string name="boast">5. Boast monuments</string>
    <string name="champs">6. Champs elysees</string>
    <string name="ternopil_castle">Each city is some of his associations. For example, when talking about the Lions in the mind arises Market Square with the Town Hall, in a conversation about Chernivtsi mentioned university, and of Ternopol - began. Few says that his bank is lock. However, the former fortress remained except a small palace. History Ternopil Castle Back in 1540, King Sigismund grants of land by the river Siret Hetman Jan Tarnowska. Soon the valley Tarnowski ordered to build a dam. Seret began to flood, creating a pond, now known as Ternopil. In the same year near the pond begins construction Ternopil castle. The function of the fortress was to stop Tatar raids from Terebovlia to Busk. Construction lasted eight years. On the south side of the river and protect the fortress began, and on the other side was vast and dug deep ditches. Get to the castle could tipper across cities. In connection with the construction of such large-scale facilities exempt from city taxes. But two decades began to rebuild the castle. This took Tarnowska son - Christopher. Also a great number of money and effort invested in the reconstruction of the fortress Tomasz Zamoyski, who got the city as dowry from his wife Catherine - the daughter of Prince Constantine Ostrog. The greatest destruction Ternopil Castle suffered in 1675. Turks thwarted defensive towers erased from the earth fortifications, dried began. When the city passed into the hands Sobieski, the castle was rebuilt to its original appearance, as he stood by the end of the 18th century. And in the early 19th century ruler of the city Korytovskyy Francis decides to rebuild the castle into a palace. From 1810 to 1815 years Ternopil was ruled by the Russian Empire. The Palace casino opened, held noisy points. But from 1843 the palace was reconstructed in the barracks who were there until 1939. 20th century was not very favorable to the palace. During the First World War, he was burning. But the biggest shock he suffered in spring 1944. There housed Nazi troops. Red Army soldiers blew up the buildings around the palace. After the war, in 1957, the castle gradually rebuilt and placed in his room sports school. Ternopil Castle today Now here is the sports school. In 2009 the townspeople raised the issue of accommodation in the Palace Museum of the History of discovery and rooms for delegations. And in April 2015 was the start to create a museum in the former castle dungeons. How to get to the castle in Ternopil Get to Ternopil very easy, because in cross important railway and roads. And the castle is near the center of Castle Street, 12.</string>
    <string name="venetian_style">Venetian-style courtyard is one of the most unusual attractions Ternopol . It was established in 1893 and got its name because of its similarity with the architectural design houses in Italy, namely the construction of the facade arches and columns. Italian Courtyard is located at the intersection of Shevchenko and Sergei Katchalov. In the year of the creation of this cozy corner in the adjoining enclosure was opened bursa for Polish students and a library, and a little later - Podolsky Museum (1913). After that settled here women`s gymnasium. At the moment, indoor courtyard is Board of Education of the City Council.</string>
    <string name="ternopil_pond">Hallmark of Ternopil is a huge man-made lake in the heart of the city. This picturesque place surrounded by a park from all sides. Ternopil Pond was built in the 16th century in the marshes of the river Siret almost at the same time as the city itself. Its creator is Jan Tarnavskiy, Crown Hetman of Ternopil castle. The lake serves as a link to fortifications erected to protect against the Turkish-Tatar raids. Pond had known times of decline, and during the Second World War, was completely destroyed. In the 50s of the 20th century began a large-scale restoration of the pond, which was named Komsomolsk lake. Its area was about 300 hectares. The name Ternopil Pond appeared in 1991, after the declaration of Independence of Ukraine. In 60 years on the pond built Lovers Island, which is now regarded as one of the most romantic places in Ukraine. You can reach the island only by boat, and in the winter when it is covered with thick ice, you can walk. On the lake 2 ply passenger ship that rolled residents and tourists. Ternopil Pond rich animal fauna. In late June, the yellow water lily blooms. Often you can find wild ducks and gulls river. It is home to carp, pike and catfish. Divers say that some catfish reach a length of 2 meters.</string>
    <string name="boast_monuments">Boast monuments plumbing, invisibility and chairs can residents of Ternopil. Located these fun attractions in the city center near the famous Ternopil shopping center Atrium. Their discovery was held to celebrate the Independence Day in 2010. The monument is an excellent sculptor working in Ternopil for many years - Dmitry Mulyarchuk. Get out employee with tap hatch, while holding the key - it looks like a monument. The sculpture symbolizes the difficult work of plumbers. Now residents of Ternopil and his guests not only admire such a work of art, but also show respect for employees Ternopil water utility. Photographed with a plumber, a chair and invisible love both adults and children.</string>
    <string name="champs_elysees">Near the lake in Shevchenko Park located such a reduced analog sights in Paris - Champs Elysees in Ternopil . The main avenue of the capital of France, stretching almost 2 kilometers, the Ukrainian Faina represented a small city park alley with two hills. Relax on the Champs Elysees In the summer the park is going to a lot of people. In particular, the Champs Elysees rests mainly young people. This green area enjoy playing frisbee, badminton and other similar games in which you can compete in the open air. It often hold picnics, walk, parents with children, you can even see the fans dive into the fictional world of books in his hands. Although the Champs Elysees Ternopil not as impressive as in Paris, but the place still is unique and extremely sweet. Getting there Champs Elysees in Ternopil are in Taras Shevchenko Park , which Beletsky street. Along located hotel Ternopil and staircase fountain. Nearby is the main street of the city - Krushelnytska where there is a stop of route number 10, 13, 19, 24 and 36, you can get to the park.</string>
    <string name="app_thinks">What do you think about this app</string>
    <string name="name">Your Name</string>
    <string name="select_what">Select what to do next</string>
    <string name="lviv">Lviv</string>
    <string name="terebovla">Terebovla</string>
    <string name="other">Other</string>
    <string name="grade">put grade</string>
    <string name="minus">-</string>
    <string name="grade_coint">0</string>
    <string name="plus">+</string>
    <string name="comments">comments</string>
    <string name="send_feedback">send feedback</string>
    <string name="back_to_start">back to start</string>
    <string name="back">back</string>
</resources>
