<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/imageternopil2"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.android.myproject.Main2Activity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/ContentsMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contents" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/castle" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/venetian" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pond" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boast" />

        <TextView
            style="@style/Contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champs" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/go3Activity"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/blafibuttonright"
        android:onClick="" />

    <ImageButton
        android:id="@+id/backActivity"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/blafibuttonleft"
        android:onClick="" />

</RelativeLayout>